[package]
name = "blog_os"
version = "0.1.0"
authors = ["Elias <brtechie@protonmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"